--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ services:
   - docker
 
 before_install:
-  - docker build -t judrin/docker-react -f ./React-Frontend/Frontend-React/Dockerfile.dev .
+  - docker build -t judrin/docker-react -f ./Dockerfile.dev .
 
 script:
   - docker run -e CI=true judrin/docker-react npm run test
 
 after_success:
-  - docker build -t judrin/React-Frontend ./React-Frontend
+  - docker build -t judrin/React-Frontend ./Frontend-React
 
   # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
