--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ before_install:
 script:
   - docker run -e CI=true judrin/docker-react npm run test
 
-after_success:
-  - docker build -t judrin/react-frontend ./Frontend-React
+# after_success:
+# - docker build -t judrin/react-frontend ./Frontend-React
 
-  # Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-  # Take those images and push them to docker hub
-  - docker push judrin/react-frontend
+# Log in to the docker CLI
+#- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+# Take those images and push them to docker hub
+#- docker push judrin/react-frontend
 
 
 
@@ -34,4 +34,3 @@ deploy:
 
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
-
