--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t judrin/docker-react -f ./Dockerfile.dev .
+  - docker build -t judrin/react-project  -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true judrin/docker-react npm run test
+  - docker run -e CI=true judrin/react-project npm run test
 
 # after_success:
 # - docker build -t judrin/react-frontend ./Frontend-React
@@ -28,9 +28,10 @@ deploy:
   app: "Front-End-React"
   env: "Frontendreact-env"
   bucket_name: "elasticbeanstalk-us-east-1-682967080831"
-  bucket_path: "docker-react"
+  bucket_path: "Front-End-React"
   on:
     branch: master
 
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
+
