--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 # Take those images and push them to docker hub
-  - docker push judrin/docker_react_project
+  - docker push judrin/react-frontend
 
 
 
